version/stable/_sources/examples/solve_sparse_matrix.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples/solve_sparse_matrix.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_solve_sparse_matrix.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_solve_sparse_matrix.py:


Perform sparse factorization and solve operations
-------------------------------------------------

Using PyAnsys Math, you can solve linear systems of equations
based on sparse or dense matrices.

.. GENERATED FROM PYTHON SOURCE LINES 9-21

.. code-block:: default

    # Perform required imports and start PyAnsys
    # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    # Perform required imports.

    from ansys.mapdl.core.examples import vmfiles
    import matplotlib.pyplot as plt

    import ansys.math.core.math as pymath

    # Start PyAnsys Math as a server.
    mm = pymath.AnsMath()








.. GENERATED FROM PYTHON SOURCE LINES 22-30

Factorize and solve sparse linear systems
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Run a MAPDL solve to create a Full file. This code
uses a model from the official verification manual.

After a solve command, the ``FULL`` file contains the assembled stiffness
matrix, mass matrix, and load vector.


.. GENERATED FROM PYTHON SOURCE LINES 30-32

.. code-block:: default

    out = mm._mapdl.input(vmfiles["vm152"])








.. GENERATED FROM PYTHON SOURCE LINES 33-37

List files in current directory
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
List the files in current directory.


.. GENERATED FROM PYTHON SOURCE LINES 37-39

.. code-block:: default

    mm._mapdl.list_files()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    ['SCRATCH', 'TABLE_1', '__tmp_sys_out_abgpiltqiu__', 'anaconda-post.log', 'anstmp', 'ansys_inc', 'bin', 'dev', 'etc', 'file.DSP', 'file.emat', 'file.err', 'file.esav', 'file.full', 'file.ldhi', 'file.log', 'file.mlv', 'file.mntr', 'file.mode', 'file.page', 'file.r001', 'file.rdb', 'file.rst', 'file.rstp', 'file.stat', 'file000.jpg', 'file001.jpg', 'file002.jpg', 'file003.jpg', 'file004.jpg', 'home', 'lib', 'lib64', 'media', 'mnt', 'opt', 'proc', 'root', 'run', 'sbin', 'srv', 'sys', 'tmp', 'usr', 'var', 'vm152.vrt', 'vm153.vrt']



.. GENERATED FROM PYTHON SOURCE LINES 40-49

Extract stiffness matrix
~~~~~~~~~~~~~~~~~~~~~~~~
Extract the stiffness matrix from the FULL file in a sparse
matrix format. For help on the ``stiff`` function, use the
``help(mm.stiff)`` command.

Print dimensions of sparse matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Print the dimensions of the sparse matrix.

.. GENERATED FROM PYTHON SOURCE LINES 49-54

.. code-block:: default


    fullfile = mm._mapdl.jobname + ".full"
    k = mm.stiff(fname=fullfile, name="K")
    k





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    AnsMath sparse matrix (27, 27)



.. GENERATED FROM PYTHON SOURCE LINES 55-59

Copy AnsMath sparse matrix to SciPy CSR matrix and plot
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Copy the AnsMath sparse matrix to a SciPy CSR matrix. Then, plot the
graph of the sparse matrix.

.. GENERATED FROM PYTHON SOURCE LINES 59-65

.. code-block:: default


    pk = k.asarray()
    plt.spy(pk, color="orange", markersize=3)
    plt.title("AnsMath sparse matrix")
    plt.show()




.. image-sg:: /examples/images/sphx_glr_solve_sparse_matrix_001.png
   :alt: AnsMath sparse matrix
   :srcset: /examples/images/sphx_glr_solve_sparse_matrix_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 66-69

Get a copy of sparse matrix as a NumPy array
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get a copy of the ``k`` sparse matrix as a NumPy array

.. GENERATED FROM PYTHON SOURCE LINES 69-73

.. code-block:: default


    ky = k.asarray()
    ky





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    <27x27 sparse matrix of type '<class 'numpy.float64'>'
    	with 77 stored elements in Compressed Sparse Row format>



.. GENERATED FROM PYTHON SOURCE LINES 74-78

Extract load vector from FULL file and print norm
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Extract the load vector from the FULL file and print the norm of this
vector.

.. GENERATED FROM PYTHON SOURCE LINES 78-81

.. code-block:: default

    b = mm.rhs(fname=fullfile, name="B")
    b.norm()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    0.12181823800246586



.. GENERATED FROM PYTHON SOURCE LINES 82-85

Get a copy of load vector as a NumPy array
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get a copy of the load vector as a NumPy array.

.. GENERATED FROM PYTHON SOURCE LINES 85-88

.. code-block:: default


    by = b.asarray()








.. GENERATED FROM PYTHON SOURCE LINES 89-93

Factorize stiffness matrix
~~~~~~~~~~~~~~~~~~~~~~~~~~
Factorize the stiffness matrix using PyAnsys Math.


.. GENERATED FROM PYTHON SOURCE LINES 93-95

.. code-block:: default

    s = mm.factorize(k)








.. GENERATED FROM PYTHON SOURCE LINES 96-99

Solve linear system
~~~~~~~~~~~~~~~~~~~
Solve the linear system.

.. GENERATED FROM PYTHON SOURCE LINES 99-102

.. code-block:: default


    x = s.solve(b)








.. GENERATED FROM PYTHON SOURCE LINES 103-106

Print norm** of solution vector
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Print the norm of the solution vector.

.. GENERATED FROM PYTHON SOURCE LINES 106-109

.. code-block:: default


    x.norm()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    7.774533362578086e-06



.. GENERATED FROM PYTHON SOURCE LINES 110-114

Check accuracy of solution
~~~~~~~~~~~~~~~~~~~~~~~~~~
Check the accuracy of the solution by verifying that
:math:`KX - B = 0`.

.. GENERATED FROM PYTHON SOURCE LINES 114-119

.. code-block:: default


    kx = k.dot(x)
    kx -= b
    print("Residual error:", kx.norm() / b.norm())





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Residual error: 5.251548690945302e-16




.. GENERATED FROM PYTHON SOURCE LINES 120-123

Get a summary of allocated objects
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Get a summary of all allocated AnsMath objects.

.. GENERATED FROM PYTHON SOURCE LINES 123-126

.. code-block:: default


    mm.status()





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    APDLMATH PARAMETER STATUS-  (      5 PARAMETERS DEFINED)

      Name                   Type            Mem. (MB)       Dims            Workspace

       K                     SMAT            0.001           [27:27]         1
       B                     VEC             0.000           27              1
       GRZBWU                VEC             0.000           27              1
       HQDHLV                VEC             0.000           27              1
       GPVMBQ                LSENGINE        --              --              1




.. GENERATED FROM PYTHON SOURCE LINES 127-130

Delete all AnsMath objects
~~~~~~~~~~~~~~~~~~~~~~~~~~
Delete all AnsMath objects.

.. GENERATED FROM PYTHON SOURCE LINES 130-133

.. code-block:: default


    mm.free()








.. GENERATED FROM PYTHON SOURCE LINES 134-137

Stop PyAnsys Math
~~~~~~~~~~~~~~~~~
Stop PyAnsys Math.

.. GENERATED FROM PYTHON SOURCE LINES 137-139

.. code-block:: default


    mm._mapdl.exit()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.517 seconds)


.. _sphx_glr_download_examples_solve_sparse_matrix.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: solve_sparse_matrix.py <solve_sparse_matrix.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: solve_sparse_matrix.ipynb <solve_sparse_matrix.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
